# photometadata

./: .gitignore  README.md  application.py  check_duplicates.py  pyproject.toml
.github/workflows/: check-code-style.yaml
photometadata/: metadata.py
photometadata/commands/: __init__.py  check.py  classify.py  duplicates.py  fix.py  processor.py
photometadata/mixins/: __init__.py  processor.py
src/photometadata/: __init__.py  cli.py  library.py  metadata.py  photo.py  settings.py
src/photometadata/commands/: __init__.py  check.py  classify.py  duplicates.py  fix.py  metadata.py
src/photometadata/mixins/: __init__.py  processor.py
src/photometadata/processors/: __init__.py  checker.py  classifier.py  duplicate_identifier.py  metadata_fixer.py  processor.py
