[tool.poetry]
name = "photometadata"
version = "0.1.0"
description = "Scripts to verify photo metadata"
authors = ["James Robinson <james.em.robinson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
azure-cognitiveservices-vision-computervision = "^0.7"
cleo = "<2.0"
ExifRead = ">2.3"
IPTCInfo3 = ">2.1"
pendulum = ">2.1"
Pillow = ">8.1"
PyYAML = ">5.4"

[tool.poetry.group.dev.dependencies]
black = ">22.1"
pylint = ">2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
