[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "photometadata"
version = "0.2.0"
description = "Scripts to verify and correct photo metadata."
readme = "README.md"
authors = [
    { name = "James Robinson", email = "james.em.robinson@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "azure-cognitiveservices-vision-computervision>=0.7",
    "ExifRead>2.3",
    "IPTCInfo3>2.1",
    "pendulum>2.1",
    "Pillow>8.1",
    "pydantic>=2.10.6",
    "PyYAML>5.4",
    "rich>=14.2.0",
    "typer>=0.20.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[project.scripts]
photometadata = "photometadata.cli:main"
